Avance mejora de importación de datos

--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -206,13 +206,13 @@
                     { data: 'mes' },
                     { data: 'tipoDocumentoID' },
                     { data: 'numDocumento' },
-                    { data: 'datosPersona' },
+                    { data: 'datosPersona', width: '15%' },
                     { data: 'categoriaPlanillaDesc' },
                     { data: 'conceptoCod' },
                     { data: 'conceptoDesc' },
                     { data: 'valorConcepto' },
                     { data: 'proveedorID' },
-                    { data: 'numDocumento' }
+                    { data: 'numDocumento', width: '15%' }
                 ],
                 columnDefs: [
                     {
