Terminado importación de archivos externos

--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -99,7 +99,7 @@
         <div class="card-header">
             <dl>
                 <dt class="h4">Monto total: <span class="badge badge-primary" id="totalArchivo"></span></dt>
-                <dt class="h4">Monto de registros correctos: <span class="badge badge-primary" id="totalCorrecto"></span></dt>
+                <dt class="h4">Monto total (sólo correctos): <span class="badge badge-primary" id="totalCorrecto"></span></dt>
             </dl>
         </div>
     </div>
