Mejora del formulario de registro de trabajadores para permitir el registro de un trabajador como administrativo y docente

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Layout.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     @Styles.Render("~/content/fonts")
 
     @Scripts.Render("~/bundles/jquery")
-    <script src="@Url.Content("~/Assets/jquery/jquery.unobtrusive-ajax.js")"></script>
+    <script src="@Url.Content("~/Assets/jquery/js/jquery.unobtrusive-ajax.js")"></script>
 
 </head>
 <body class="sidebar-collapse">
