--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -118,7 +118,33 @@
                     loadingRecords: "Cargando...",
                     processing: "Procesando..."
                 },
-                searching: true
+                searching: true,
+                initComplete: function () {
+                    this.api().columns([7]).every(function () {
+                        let column = this;
+
+                        let select = document.createElement('select');
+                        select.add(new Option('Vínculo', ''));
+                        column.footer().replaceChildren(select);
+
+                        select.addEventListener('change', function () {
+                            var val = $.fn.dataTable.util.escapeRegex(select.value);
+                            column.search(val ? '^' + val + '$' : '', true, false).draw();
+                        });
+
+                        column.data().unique().sort().each(function (d, j) {
+                            if (column.search() === '^' + d + '$') {
+                                select.add(new Option(d, d, true, true));
+                            } else {
+                                select.add(new Option(d, d));
+                            }
+                        });
+
+                        $(select).click(function (e) {
+                            e.stopPropagation();
+                        });
+                    });
+                }
             });
         }
     </script>
