Avance gestión de usuarios.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="card-header">
             <span class="h4">Trabajadores</span>
             <a href="@Url.Action("Nuevo", "Trabajadores")" class="btn btn-primary pull-right modal-link-lg">
-                <i class=" bi-ui-checks-grid" aria-hidden="true"></i> Nuevo trabajador
+                <i class="fa fa-user-plus" aria-hidden="true"></i> Nuevo trabajador
             </a>
         </div>
         <div class="card-body">
