--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -33,6 +33,7 @@
             </a>
             <ul id="configurations" class="collapse">
                 <li><a href="@Url.Action("Index", "PlantillaPlanilla")"><i class="fa bi-ui-checks"></i> Plantilla</a></li>
+                <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-users"></i> Usuarios</a></li>
             </ul>
         </li>
         <li class="nav-item">
