Avance registrar usuario

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Users/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Users/Index.cshtml
@@ -85,8 +85,8 @@
                         targets: -1,
                         orderable: false,
                         render: function (data, type, row) {
-                            return `<a class="modal-link-lg" href="@Url.Action("Editar", "Users")/${data}` +
-                                '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
+                            return `<a class="modal-link-lg" href="@Url.Action("ResetPassword", "Users")/${data}` +
+                                '"><i class="fa fa-refresh" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Reestablecer</span></a>';
                         }
                     }
                 ],
