Se agregó las librerías para gestionar usuarios en el Domain. Se corrigó un error de visualización del monto total de un archivo importado. Se corrigió un error al guardar el monto de un concepto en el mantenimiento de datos externos.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -300,11 +300,15 @@
 
                         jsonObject.forEach(function (item) {
                             if (item.esRegistroCorrecto) {
-                                sumTotalCorrecto += item.valorConcepto;
+                                sumTotalCorrecto += Number.parseFloat(item.valorConcepto.toPrecision(15));
+
+                                sumTotalCorrecto = Number.parseFloat(sumTotalCorrecto.toFixed(2));
                             }
 
                             if (item.valorConceptoCorrecto) {
-                                sumTotalArchivo += item.valorConcepto;
+                                sumTotalArchivo += Number.parseFloat(item.valorConcepto.toPrecision(15));
+
+                                sumTotalArchivo = Number.parseFloat(sumTotalArchivo.toFixed(2));
                             }
                         });
 
