--- a/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/Index.cshtml
@@ -27,12 +27,14 @@
                             <th>Año</th>
                             <th>Mes</th>
                             <th></th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
                             <th>Año</th>
                             <th>Mes</th>
+                            <th></th>
                             <th></th>
                         </tr>
                     </tfoot>
@@ -50,6 +52,45 @@
             $(".modal").on('hide.bs.modal', function () {
                 generarDataTablePeriodos();
             });
+
+            $('#dataTablePeriodos').on('click', '.btn-eliminar', function (event) {
+                event.preventDefault();
+
+                let id = $(this).data("id");
+                let token = $('input[name="__RequestVerificationToken"]').val();
+
+                Swal.fire({
+                    title: '',
+                    text: '¿Desea eliminar este registro?',
+                    icon: MENSAJE.WARNING,
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Si, continuar.',
+                    cancelButtonText: 'No, cancelar.'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: '@Url.Action("Eliminar", "Periodos")/' + id,
+                            type: "POST",
+                            data: { __RequestVerificationToken: token },
+                            beforeSend: function () {
+                            },
+                            success: function (data) {
+                                if (data.Success) {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.SUCCESS);
+                                    generarDataTablePeriodos();
+                                } else {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.ERROR);
+                                }
+                            },
+                            error: function (jqXHR, textStatus, errorThrown) {
+                                toastr.error(errorThrown);
+                            }
+                        });
+                    }
+                });
+            });
         });
 
         function generarDataTablePeriodos() {
@@ -61,15 +102,28 @@
                 columns: [
                     { data: 'anio' },
                     { data: 'mesDesc' },
-                    { data: 'periodoID' }
+                    { data: 'periodoID', width: '10%' },
+                    { data: 'periodoID', width: '10%' }
                 ],
                 columnDefs: [
                     {
-                        targets: -1,
+                        targets: -3,
+                        orderable: false
+                    },
+                    {
+                        targets: -2,
                         orderable: false,
                         render: function (data, type, row) {
                             return `<a class="modal-link" href="@Url.Action("Editar", "Periodos")/${data}` +
                                 '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
+                        }
+                    },
+                    {
+                        targets: -1,
+                        orderable: false,
+                        render: function (data, type, row) {
+                            return `<a class="btn-eliminar" href="#" data-id="${data}"` +
+                                '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i></a>';
                         }
                     }
                 ],
