Avance mantenimiento de dependencia.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -32,6 +32,8 @@
                 <i class="fa fa-fw fa-cogs"></i> Configuración<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="configurations" class="collapse">
+                <li><a href="@Url.Action("Index", "ActividadesMetas")"><i class="fa fa-users"></i> Actividades y metas</a></li>
+                <li><a href="@Url.Action("Index", "Dependencias")"><i class="fa fa-users"></i> Dependencias</a></li>
                 <li><a href="@Url.Action("Index", "Periodos")"><i class="fa bi-stack"></i> Periodos</a></li>
                 <li><a href="@Url.Action("Index", "PlantillaPlanilla")"><i class="fa bi-ui-checks"></i> Plantilla</a></li>
                 <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-users"></i> Usuarios</a></li>
