--- a/src/app/00078-GestionPlanillas/WebApp/Views/Dependencias/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Dependencias/Index.cshtml
@@ -5,7 +5,7 @@
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home">&nbsp;</i>Inicio</a></li>
                     <li class="breadcrumb-item"><span><i class="fa fa-cogs" aria-hidden="true">&nbsp;</i>Configuración </span></li>
-                    <li class="breadcrumb-item active"><span><i class="fa bi-stack">&nbsp;</i>@ViewBag.Title </span></li>
+                    <li class="breadcrumb-item active"><span><i class="fa bi-building">&nbsp;</i>@ViewBag.Title </span></li>
                 </ol>
             </nav>
             <h1 class="">@ViewBag.Title <small></small></h1>
@@ -14,26 +14,28 @@
 
     <div class="card mb-4">
         <div class="card-header">
-            <span class="h4">Periodos</span>
-            <a href="@Url.Action("Nuevo", "Periodos")" class="btn btn-primary pull-right modal-link">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i> Nuevo periodo
+            <span class="h4">Dependencias</span>
+            <a href="@Url.Action("Nuevo", "Dependencias")" class="btn btn-primary pull-right modal-link">
+                <i class="fa fa-plus-circle" aria-hidden="true"></i> Nueva dependencia
             </a>
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-hover" id="dataTablePeriodos" width="100%">
+                <table class="table table-hover" id="dataTableDependencias" width="100%">
                     <thead class="thead-dark">
                         <tr>
-                            <th>Año</th>
-                            <th>Mes</th>
+                            <th>Código</th>
+                            <th>Descripción</th>
+                            <th></th>
                             <th></th>
                             <th></th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
-                            <th>Año</th>
-                            <th>Mes</th>
+                            <th>Código</th>
+                            <th>Descripción</th>
+                            <th></th>
                             <th></th>
                             <th></th>
                         </tr>
@@ -47,13 +49,13 @@
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
-            generarDataTablePeriodos();
+            generarDataTableDependencias();
 
             $(".modal").on('hide.bs.modal', function () {
-                generarDataTablePeriodos();
+                generarDataTableDependencias();
             });
 
-            $('#dataTablePeriodos').on('click', '.btn-eliminar', function (event) {
+            $('#dataTableDependencias').on('click', '.btn-eliminar', function (event) {
                 event.preventDefault();
 
                 let id = $(this).data("id");
@@ -71,7 +73,7 @@
                 }).then((result) => {
                     if (result.isConfirmed) {
                         $.ajax({
-                            url: '@Url.Action("Eliminar", "Periodos")/' + id,
+                            url: '@Url.Action("Eliminar", "Dependencias")/' + id,
                             type: "POST",
                             data: { __RequestVerificationToken: token },
                             beforeSend: function () {
@@ -79,7 +81,7 @@
                             success: function (data) {
                                 if (data.Success) {
                                     mostrarMensajeSistema(data.Message, MENSAJE.SUCCESS);
-                                    generarDataTablePeriodos();
+                                    generarDataTableDependencias();
                                 } else {
                                     mostrarMensajeSistema(data.Message, MENSAJE.ERROR);
                                 }
@@ -93,28 +95,48 @@
             });
         });
 
-        function generarDataTablePeriodos() {
-            $('#dataTablePeriodos').DataTable({
+        function generarDataTableDependencias() {
+            $('#dataTableDependencias').DataTable({
                 ajax: {
-                    'url': '@Url.Action("ObtenerListaPeriodos", "Periodos")',
+                    'url': '@Url.Action("ObtenerListaDependencias", "Dependencias")',
                     'type': 'get'
                 },
                 columns: [
-                    { data: 'anio' },
-                    { data: 'mesDesc' },
-                    { data: 'periodoID', width: '10%' },
-                    { data: 'periodoID', width: '10%' }
+                    { data: 'dependenciaCod' },
+                    { data: 'dependenciaDesc' },
+                    { data: 'estaHabilitado' },
+                    { data: 'dependenciaID', width: '10%' },
+                    { data: 'dependenciaID', width: '10%' }
                 ],
                 columnDefs: [
                     {
                         targets: -3,
-                        orderable: false
+                        orderable: false,
+                        render: function (data, type, row) {
+                            let btnClass = (row.estaHabilitado === true) ? 'success' : 'secondary';
+                            let iClass = (row.estaHabilitado === true) ? 'check-circle-o' : 'minus-circle';
+                            let estado = (row.estaHabilitado === true) ? 'Habilitado' : 'Deshabilitado';
+
+                            let url = '@Url.Action("CambiarEstado", "Dependencias")';
+                            let token = $('input[name="__RequestVerificationToken"]').val();
+                            let container = 'dataTableDependencias';
+
+                            let onClickFunction = `ChangeState(${row.dependenciaID}, ${row.estaHabilitado}, '${url}', '${token}', '${container}')`;
+
+                            let html = `<span id="td${row.dependenciaID}">` +
+                                `<button type="submit" class="btn btn-xs btn-${btnClass}" onclick="${onClickFunction}">` +
+                                `<i class="fa fa-${iClass}" aria-hidden="true"></i> <span class="d-none d-md-inline-block">${estado}</span>` +
+                                '</button>' +
+                                '</span>';
+
+                            return html;
+                        }
                     },
                     {
                         targets: -2,
                         orderable: false,
                         render: function (data, type, row) {
-                            return `<a class="modal-link" href="@Url.Action("Editar", "Periodos")/${data}` +
+                            return `<a class="modal-link" href="@Url.Action("Editar", "Dependencias")/${data}` +
                                 '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
                         }
                     },
@@ -129,8 +151,8 @@
                 ],
                 bStateSave: true,
                 bDestroy: true,
-                lengthMenu: [[6, 12, 24, -1], [6, 12, 24, "Todas"]],
-                iDisplayLength: 12,
+                lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "Todas"]],
+                iDisplayLength: 10,
                 language: {
                     search: "Buscar: ",
                     lengthMenu: "Mostrar _MENU_ filas",
